# han-mads-portfolio

./: .gitignore  README.md  _config.yml  pyproject.toml
1-hypertuning-gridsearch/: notebook.ipynb  reflection.md  results.csv  results_overnight.csv  summary.md
2-hypertuning-mlflow/: .gitignore  notebook.ipynb  reflection.md  results.csv  results_overnight.csv  summary.md
3-hypertuning-rnn/: notebook.ipynb  reflection.md  results.csv  results_overnight.csv  results_user_split_gpu.csv  summary.md
4-hypertuning-ray/: .gitignore  best_config_cuda_overnight.json  hypertune.py  ray_trainable.py  report.md  results_cuda_overnight.csv  summary.md  test_hypertune_local.py  tuning_common.py
5-deployment/: summary.md
6-hackathon/: project_cuddlefish.md
7-ethics/: summary.md
